--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ dependencies:
 
 
   cupertino_icons: ^1.0.8
-  flutter_svg: ^2.0.10+1
-  #flutter_bloc: ^8.1.6
-  #hydrated_bloc: ^9.1.5
-  #path_provider: ^2.1.4
+  flutter_svg:
+  flutter_bloc:
+  hydrated_bloc:
+  path_provider:
   #firebase_core: ^3.3.0
   #firebase_auth: ^5.1.4
   #cloud_firestore: ^5.2.1
