--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   flutter_bloc:
   hydrated_bloc:
   path_provider:
-  #firebase_core: ^3.3.0
+  firebase_core:
   #firebase_auth: ^5.1.4
   #cloud_firestore: ^5.2.1
   #get_it: ^7.7.0
