--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   firebase_auth:
   get_it:
   dartz:
-  #cloud_firestore: ^5.2.1
+  cloud_firestore:
   #just_audio: ^0.9.40
 
 dev_dependencies:
